# patty

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  electron.vite.config.ts  package-lock.json  package.json  question.md  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
designs/: FloatingPanel.tsx  FloatingPanelButtons.html  animation-gsap.html  animation-preview.html  contribution-grid-preview.html  fire.html  glass-preview.html  gsap-demo.html  gsap-showcase.html  icon-preview.html
logo/: README.md
resources/: opencode-patty-plugin.ts  patty-hook.ps1
scripts/: benchmark-results.json  benchmark.md  benchmark.mjs  svg-to-ico.mjs  sync-version.mjs
scripts/shell-integration/: cmd-prompt.cmd  pwsh.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fonts.rs  hooks.rs  installer.rs  main.rs  metrics.rs  pty.rs  store.rs
src/main/: errorPolicy.test.ts  errorPolicy.ts  heartbeat.test.ts  heartbeat.ts  hookInstaller.test.ts  hookInstaller.ts  index.ts  ipcHandlers.ts  jsonStore.ts  metricsCollector.ts  opencodePlugin.test.ts  ptyManager.test.ts  ptyManager.ts  settingsHandler.ts  stateHandler.ts
src/preload/: index.ts
src/renderer/: App.module.css  App.tsx  api.ts  global.d.ts  index.html  main.tsx
src/shared/: defaultSettings.ts  heartbeat.ts  metricsTypes.ts  paneTreeNormalize.test.ts  paneTreeNormalize.ts  paneTypes.ts  perf.ts  (+5 more)
(+116 files in other folders)
