[package]
name = "patty"
version = "1.2.12"
description = "Patty"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
portable-pty = "0.9.0"
tiny_http = "0.12.0"
getrandom = "0.3.4"
rfd = "0.17.2"
sysinfo = "0.36.1"
encoding_rs = "0.8.35"
tauri-plugin-single-instance = "2.0.0-rc.5"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
